initial commit for pyqt-app branch

--- a/index.html
+++ b/index.html
@@ -4,26 +4,23 @@
     <title>Chatbot</title>
 </head>
 <body>
-    <h1>Chatbot</h1>
+    <div>
+        <label for="username">Username:</label>
+        <input id="username" type="text">
+        <button onclick="setUsername()">Set Username</button>
+    </div>
+    <div>
+        <label for="api-key">OpenAI API Key:</label>
+        <input id="api-key" type="text">
+        <button onclick="setAPIKey()">Set API Key</button>
+    </div>
     <div id="chat-box">
         <!-- Chat messages will go here -->
     </div>
     <input id="user-input" type="text">
     <button onclick="sendMessage()">Send</button>
 
-    <script>
-        async function sendMessage() {
-            const userInput = document.getElementById('user-input').value;
-            const response = await fetch('http://127.0.0.1:5000/chat', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json',
-                },
-                body: JSON.stringify({ "user_input": userInput }),
-            });
-            const data = await response.json();
-            // Append messages to chat-box
-        }
-    </script>
+    <script src="script.js"></script>
 </body>
 </html>
+
